test/files/continuations-neg/function2.check
function2.scala:11: error: type mismatch;
 found   : () => Int
 required: () => Int @scala.util.continuations.cpsParam[Int,Int]
    val g: () => Int @cps[Int] = f
                                 ^
one error found
